<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fetl.chatveeratham.yothin.fetlqrcode.MainActivity">

    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:padding="20dp"
        android:background="#82ffffff"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/fetl_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_user" />

            <EditText
                android:inputType="text"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password" />

            <EditText
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:text="New Register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
